Modify StyleTransfer Dataset and demo.
E
nano

--- a/neural-style-transfer/GoghStyleTransfer.ipynb
+++ b/neural-style-transfer/GoghStyleTransfer.ipynb
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/savyasachi/let-it-gogh/neural-style-transfer/Images/\n"
+      "/datasets/home/home-03/92/292/ssavyasa/new-repo/let-it-gogh/neural-style-transfer/Images/\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "cuda\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -266,13 +266,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/vgg19-dcbb9e9d.pth\" to /tmp/xdg-cache/torch/checkpoints/vgg19-dcbb9e9d.pth\n",
+      "100%|██████████| 548M/548M [00:09<00:00, 60.2MB/s] \n"
+     ]
+    }
+   ],
    "source": [
     "## Init Net & Data\n",
     "net = StyleTransferNet().to(device)\n",
@@ -302,19 +311,19 @@
     "max_iter = 500\n",
     "show_iter = 10\n",
     "\n",
-    "## Run for Different Pairs\n",
-    "for T in training_data:\n",
-    "    style_image = T[2].to(device)\n",
-    "    content_image = T[3].to(device)\n",
-    "    opt_img = T[4].to(device)\n",
+    "T = training_data[0]\n",
+    "\n",
+    "style_image = T[2].to(device)\n",
+    "content_image = T[3].to(device)\n",
+    "opt_img = T[4].to(device)\n",
     "    \n",
-    "    optimizer = optim.LBFGS([opt_img]);\n",
-    "    loss_layers, loss_fns, targets = configureLossFunctionsAndTargets(\n",
-    "        style_image, content_image, style_layers, content_layers)\n",
+    "optimizer = optim.LBFGS([opt_img]);\n",
+    "loss_layers, loss_fns, targets = configureLossFunctionsAndTargets(\n",
+    "style_image, content_image, style_layers, content_layers)\n",
     "    \n",
-    "    ## Run Net\n",
-    "    n_iter = [0]\n",
-    "    while n_iter[0] <= max_iter:\n",
+    "## Run Net\n",
+    "n_iter = [0]\n",
+    "while n_iter[0] <= max_iter:\n",
     "\n",
     "        def closure():\n",
     "            optimizer.zero_grad()\n",
@@ -328,32 +337,20 @@
     "        optimizer.step(closure)\n",
     "    \n",
     "    #display result\n",
-    "    out_img = postProcess(opt_img.cpu().squeeze())\n",
-    "    plt.imshow(out_img)\n",
+    "out_img = postProcess(opt_img.cpu().squeeze())\n",
+    "plt.imshow(out_img)\n",
     "    # gcf().set_size_inches(10,10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'out_img' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-23e9b14c1892>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout_img\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'out_img' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.imshow(out_img)"
    ]
@@ -397,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
