Add Comments in Experiments and add loss plot in demo

--- a/neural-style-transfer/Experiments/Initialization.ipynb
+++ b/neural-style-transfer/Experiments/Initialization.ipynb
@@ -51,6 +51,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Effect of Initialization  - The below three cell displays three output images for Random Initialization, Initialization with Content Image and Initialization with Style Image Respectively. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
